style updates to join page, video alignment fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -654,6 +654,26 @@ a, .btn {
     margin-top: 60px;
 }
 /*
+ * Join Styles
+ */
+
+#ctavid{
+	padding:22px 2px 0px 36px;
+}
+.why-section-title{
+	text-align:center;
+	color:#472264!important;
+}
+#lipsticksmear{
+	position:relative;
+	left:-123px;
+}
+#pastelpatches{
+	left: 112px;
+    position: relative;
+    top: -23px;
+}
+/*
  * Menu Styles
  * --------------------------------------------------
  */
@@ -826,7 +846,6 @@ a:focus {
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
 }
-
 .configureKitModal.modal {
     min-width: 640px;
     min-height: 400px;
